# Total-LLM

./: .env.example  .gitignore  README.md  check_status.sh  docker-compose.yml  start_all.sh  stop_all.sh
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  start.sh
backend/agents/: mcp_agent.py  multi_agent.py
backend/api/: auth_api.py  control_api.py  document_api.py  generator_api.py  image_api.py  log_ingestion_api.py  security_chat_api.py  system_api.py
backend/archived/: README.md
backend/config/: model_config.py
backend/data/: bm25_index.pkl
backend/database/: init_db.py  schema.sql
backend/docs/: QWEN_VLM_INTEGRATION.md
backend/middleware/: __init__.py  tracing.py
backend/qdrant_data/: raft_state.json
backend/retrievers/: adaptive_retriever.py  bm25_indexer.py  hybrid_retriever.py  multi_query_retriever.py  query_expander.py
backend/services/: alarm_handler.py  auth_service.py  cache_service.py  device_registry.py  kafka_consumer.py  log_indexer.py  rag_service.py  vlm_analyzer.py
backend/services/api_generator/: analyzer.py  doc_parser.py
backend/services/control/: __init__.py  audit_logger.py  device_registry.py  function_schemas.py  rate_limiter.py  system_controller.py
backend/services/vision/: security_analyzer.py  vision_analyzer.py
backend/src/total_llm/: __init__.py  app.py
backend/tests/: __init__.py  test_api_generator.py
backend/tests/api/: test_agent_api.py  test_image_api.py
backend/tests/e2e/: test_agent_flow.py
backend/tests/unit/: test_acu_controller.py  (+8 more)
backend/tools/: mcp_client.py  rag_tool.py
(+170 files in other folders)
